--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -76,6 +76,84 @@
 @define-color dark_3 #3d3846;
 @define-color dark_4 #241f31;
 @define-color dark_5 #000000;
+@define-color accent_color rgb(242, 140, 42);
+@define-color accent_bg_color rgb(251, 184, 108);
+@define-color accent_fg_color rgb(48, 48, 48);
+@define-color destructive_color #ff7b63;
+@define-color destructive_bg_color #c01c28;
+@define-color destructive_fg_color #ffffff;
+@define-color success_color #8ff0a4;
+@define-color success_bg_color #26a269;
+@define-color success_fg_color #ffffff;
+@define-color warning_color #f8e45c;
+@define-color warning_bg_color #cd9309;
+@define-color warning_fg_color rgba(0, 0, 0, 0.8);
+@define-color error_color #ff7b63;
+@define-color error_bg_color #c01c28;
+@define-color error_fg_color rgb(54, 54, 54);
+@define-color window_bg_color rgb(48, 48, 48);
+@define-color window_fg_color #ffffff;
+@define-color view_bg_color rgb(43, 43, 43);
+@define-color view_fg_color #ffffff;
+@define-color headerbar_bg_color rgb(54, 54, 54);
+@define-color headerbar_fg_color #ffffff;
+@define-color headerbar_border_color #ffffff;
+@define-color headerbar_backdrop_color rgb(54, 54, 54);
+@define-color headerbar_shade_color rgba(0, 0, 0, 0.36);
+@define-color card_bg_color rgb(39, 39, 39);
+@define-color card_fg_color #ffffff;
+@define-color card_shade_color rgba(0, 0, 0, 0.36);
+@define-color dialog_bg_color #383838;
+@define-color dialog_fg_color #ffffff;
+@define-color popover_bg_color rgb(43, 43, 43);
+@define-color popover_fg_color #ffffff;
+@define-color shade_color rgba(0, 0, 0, 0.36);
+@define-color scrollbar_outline_color rgba(0, 0, 0, 0.5);
+@define-color blue_1 #99c1f1;
+@define-color blue_2 #62a0ea;
+@define-color blue_3 #3584e4;
+@define-color blue_4 #1c71d8;
+@define-color blue_5 #1a5fb4;
+@define-color green_1 #8ff0a4;
+@define-color green_2 #57e389;
+@define-color green_3 #33d17a;
+@define-color green_4 #2ec27e;
+@define-color green_5 #26a269;
+@define-color yellow_1 #f9f06b;
+@define-color yellow_2 #f8e45c;
+@define-color yellow_3 #f6d32d;
+@define-color yellow_4 #f5c211;
+@define-color yellow_5 #e5a50a;
+@define-color orange_1 #ffbe6f;
+@define-color orange_2 #ffa348;
+@define-color orange_3 #ff7800;
+@define-color orange_4 #e66100;
+@define-color orange_5 #c64600;
+@define-color red_1 #f66151;
+@define-color red_2 #ed333b;
+@define-color red_3 #e01b24;
+@define-color red_4 #c01c28;
+@define-color red_5 #a51d2d;
+@define-color purple_1 #dc8add;
+@define-color purple_2 #c061cb;
+@define-color purple_3 #9141ac;
+@define-color purple_4 #813d9c;
+@define-color purple_5 #613583;
+@define-color brown_1 #cdab8f;
+@define-color brown_2 #b5835a;
+@define-color brown_3 #986a44;
+@define-color brown_4 #865e3c;
+@define-color brown_5 #63452c;
+@define-color light_1 #ffffff;
+@define-color light_2 #f6f5f4;
+@define-color light_3 #deddda;
+@define-color light_4 #c0bfbc;
+@define-color light_5 #9a9996;
+@define-color dark_1 #77767b;
+@define-color dark_2 #5e5c64;
+@define-color dark_3 #3d3846;
+@define-color dark_4 #241f31;
+@define-color dark_5 #000000;
 /*****************
  *WINDOW CONTROLS*
  *****************/
@@ -90,22 +168,28 @@ windowcontrols image {
 windowcontrols image:hover {
 	background-color: alpha(@headerbar_fg_color, 0.16);
 }
+
 /* When the buttons are pushed down: */
 windowcontrols image:active {
 	background-color: alpha(@headerbar_fg_color, 0.10);
 }
+
 headerbar windowcontrols button.close image {
 	background-color: #f28c2a;
 }
+
 headerbar windowcontrols button.close image:hover {
 	background-color: #5e5e5e;
 }
+
 headerbar windowcontrols button.close image:active {
 	background-color: alpha(@headerbar_fg_color, 0.10);
 }
+
 headerbar:backdrop windowcontrols button.close image {
 	background-color: transparent;
 }
+
 headerbar:backdrop windowcontrols button.close image:hover {
 	background-color: alpha(@headerbar_fg_color, 0.10);
 }
@@ -116,9 +200,11 @@ headerbar:backdrop windowcontrols button.close image:hover {
 switch slider {
 	background-color: #363636;
 }
+
 switch {
 	background-color: #686868;
 }
+
 switch:checked {
 	background-color: @accent_bg_color;
 }
@@ -149,29 +235,30 @@ scale slider {
 	border-color: @shade_color;
 }
 
-list.boxed-list  {
+list.boxed-list {
 	border-radius: 5px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: @shade_color;
 }
 
-list.boxed-list row:not(:last-child):not(:first-child):only-child{
+list.boxed-list row:not(:last-child):not(:first-child):only-child {
 	border-radius: 0px;
 }
 
 /*nested rows are wierd and don't have a color*/
-list.boxed-list row.expander list.nested > row:last-child:not(:only-child) {
+list.boxed-list row.expander list.nested>row:last-child:not(:only-child) {
 	background-color: #202020;
 }
 
 /*middle rows are straight*/
-list.boxed-list row:not(:last-child):not(:first-child):hover{
+list.boxed-list row:not(:last-child):not(:first-child):hover {
 	border-radius: 0px;
 }
 
 /*end rows are rounded at the bottom*/
-list.boxed-list row:last-child, list.boxed-list row:last-child:hover {
+list.boxed-list row:last-child,
+list.boxed-list row:last-child:hover {
 	border-top-left-radius: 0px;
 	border-top-right-radius: 0px;
 	border-bottom-left-radius: 5px;
@@ -179,7 +266,8 @@ list.boxed-list row:last-child, list.boxed-list row:last-child:hover {
 }
 
 /*begining rows are rounded at the top*/
-list.boxed-list row:first-child,list.boxed-list row:first-child:hover {
+list.boxed-list row:first-child,
+list.boxed-list row:first-child:hover {
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	border-bottom-left-radius: 0px;
@@ -192,7 +280,7 @@ list.boxed-list row.activatable:not(:last-child):not(:first-child):selected {
 	border-radius: 0px;
 }
 
-list.boxed-list row.activatable:last-child:selected{
+list.boxed-list row.activatable:last-child:selected {
 	color: @dark_5;
 	background-color: #94ebeb;
 	border-top-left-radius: 0px;
@@ -214,9 +302,11 @@ row.activatable:selected {
 }
 
 
-list row.entry:only-child,list row.entry:only-child:hover {
+list row.entry:only-child,
+list row.entry:only-child:hover {
 	border-radius: 5px;
 }
+
 window {
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
@@ -241,6 +331,9 @@ scrollbar range trough slider:active {
 /***************
  *Viewswitcher *
  ***************/
+viewswitcher {
+	border-spacing: 0;
+}
 viewswitcher button.flat.horizontal.toggle {
 	margin-top: 0px;
 	margin-bottom: 0px;
@@ -261,7 +354,8 @@ viewswitcher button.flat.horizontal.toggle:checked {
 	box-shadow: inset 0px -4px @accent_bg_color;
 }
 
-viewswitcher button.flat.horizontal.toggle box, viewswitcher button.flat.vertical.toggle box {
+viewswitcher button.flat.horizontal.toggle box,
+viewswitcher button.flat.vertical.toggle box {
 	margin-top: 2px;
 }
 
@@ -308,24 +402,31 @@ revealer viewswitcher.narrow button.flat.vertical.toggle:checked {
 /*******
  *TABS *
  *******/
+tabbox {
+	padding: 0px;
+}
 tabboxchild {
 	margin-top: 0px;
 	margin-bottom: 0px;
+	padding: 0px;
 	border-radius: 0px;
 }
 
 tabboxchild tab {
 	border-radius: 0px;
+	padding: 0px;
 }
 
 tabboxchild tab:selected {
 	border-radius: 0px;
 	box-shadow: inset 0px -4px @accent_bg_color;
+	padding: 0px;
 }
 
 tabboxchild tab:hover:not(:selected) {
 	border-radius: 0px;
 	box-shadow: inset 0px -4px darker(@headerbar_bg_color);
+	padding: 0px;
 }
 
 tabthumbnail picture {
@@ -336,14 +437,14 @@ popover contents {
 	border-radius: 5px;
 	border-style: solid;
 	border-width: 1px;
-	border-color: @shade_color;
+	border-color: #202020;
 }
 
-box.horizontal.linked button:first-child:hover{
+box.horizontal.linked button:first-child:hover {
 	border-bottom-left-radius: 5px;
 
 }
 
-box.horizontal.linked button:last-child:hover{
+box.horizontal.linked button:last-child:hover {
 	border-bottom-right-radius: 5px;
 }
