--- a/.config/gtk-4.0/gtk.css
+++ b/.config/gtk-4.0/gtk.css
@@ -1,23 +1,25 @@
+/* Define Accent colors */
 @define-color accent_color #7e57c2;
 @define-color accent_bg_color #613583;
-.csd headerbar { min-height: 42px;}
 
-headerbar windowcontrols button.close image {
-	background-color: @accent_color;
+
+/* Headerbar customization */
+.csd headerbar {
+  min-height: 42px;
 }
 
+headerbar windowcontrols button.close image,
 headerbar GtkWindowControls button.close image {
-    background-color: @accent_color;
+  background-color: @accent_color;
 }
 
-/* GTK4 */
-
-windowcontrols > button { /* GTK4 */
+/* GTK4 Window Controls */
+windowcontrols > button {
   color: transparent;
   min-width: 2px;
   min-height: 2px;
   border-radius: 100%;
-  padding: 1px;
+  padding: 0;
   margin: 0 5px;
 }
 
@@ -25,32 +27,68 @@ windowcontrols > button > image {
   padding: 0;
 }
 
+/* Button styles */
 button.titlebutton.close,
-windowcontrols > button.close {
-  background-color: #505050;
-}
-
-button.titlebutton.close:hover,
-windowcontrols > button.close:hover {
-  opacity: 0.8;
-}
-
+windowcontrols > button.close,
 button.titlebutton.maximize,
-windowcontrols > button.maximize {
-  background-color: #505050;
-}
-
-button.titlebutton.maximize:hover,
-windowcontrols > button.maximize:hover {
-  opacity: 0.8;
-}
-
+windowcontrols > button.maximize,
 button.titlebutton.minimize,
 windowcontrols > button.minimize {
   background-color: #505050;
 }
 
+button.titlebutton.close:hover,
+windowcontrols > button.close:hover,
+button.titlebutton.maximize:hover,
+windowcontrols > button.maximize:hover,
 button.titlebutton.minimize:hover,
 windowcontrols > button.minimize:hover {
   opacity: 0.8;
 }
+
+/* Old Libadwaita 1.5 Colors */
+
+@define-color destructive_color #ff7b63;
+@define-color destructive_bg_color #c01c28;
+@define-color destructive_fg_color #ffffff;
+@define-color success_color #8ff0a4;
+@define-color success_bg_color #26a269;
+@define-color success_fg_color #ffffff;
+@define-color warning_color #f8e45c;
+@define-color warning_bg_color #cd9309;
+@define-color warning_fg_color rgba(0, 0, 0, 0.8);
+@define-color error_color #ff7b63;
+@define-color error_bg_color #c01c28;
+@define-color error_fg_color #ffffff;
+@define-color window_bg_color #242424;
+@define-color window_fg_color #ffffff;
+@define-color view_bg_color #1e1e1e;
+@define-color view_fg_color #ffffff;
+@define-color headerbar_bg_color #303030;
+@define-color headerbar_fg_color #ffffff;
+@define-color headerbar_border_color #ffffff;
+@define-color headerbar_backdrop_color #242424;
+@define-color headerbar_shade_color rgba(0, 0, 0, 0.36);
+@define-color headerbar_darker_shade_color rgba(0, 0, 0, 0.9);
+@define-color sidebar_bg_color #303030;
+@define-color sidebar_fg_color #ffffff;
+@define-color sidebar_backdrop_color #2a2a2a;
+@define-color sidebar_border_color rgba(0, 0, 0, 0.36);
+@define-color sidebar_shade_color rgba(0, 0, 0, 0.25);
+@define-color secondary_sidebar_bg_color #2a2a2a;
+@define-color secondary_sidebar_fg_color #ffffff;
+@define-color secondary_sidebar_backdrop_color #272727;
+@define-color secondary_sidebar_border_color rgba(0, 0, 0, 0.36);
+@define-color secondary_sidebar_shade_color rgba(0, 0, 0, 0.25);
+@define-color card_bg_color rgba(255, 255, 255, 0.08);
+@define-color card_fg_color #ffffff;
+@define-color card_shade_color rgba(0, 0, 0, 0.36);
+@define-color thumbnail_bg_color #383838;
+@define-color thumbnail_fg_color #ffffff;
+@define-color dialog_bg_color #383838;
+@define-color dialog_fg_color #ffffff;
+@define-color popover_bg_color #383838;
+@define-color popover_fg_color #ffffff;
+@define-color popover_shade_color rgba(0, 0, 0, 0.25);
+@define-color shade_color rgba(0, 0, 0, 0.25);
+@define-color scrollbar_outline_color rgba(0, 0, 0, 0.5);
