--- a/.config/gtk-4.0/gtk.css
+++ b/.config/gtk-4.0/gtk.css
@@ -1,65 +1,6 @@
-/* Define Accent colors */
 @define-color accent_color #7e57c2;
 @define-color accent_bg_color #613583;
-
-
-/* Headerbar customization */
-.csd headerbar {
-  min-height: 42px;
-}
-
-headerbar windowcontrols button.close image,
-headerbar GtkWindowControls button.close image {
-  background-color: @accent_color;
-}
-
-/* GTK4 Window Controls */
-windowcontrols > button {
-  color: transparent;
-  min-width: 2px;
-  min-height: 2px;
-  border-radius: 100%;
-  padding: 0;
-  margin: 0 5px;
-}
-
-windowcontrols > button > image {
-  padding: 0;
-}
-
-/* Button styles */
-button.titlebutton.close,
-windowcontrols > button.close,
-button.titlebutton.maximize,
-windowcontrols > button.maximize,
-button.titlebutton.minimize,
-windowcontrols > button.minimize {
-  background-color: #505050;
-}
-
-button.titlebutton.close:hover,
-windowcontrols > button.close:hover,
-button.titlebutton.maximize:hover,
-windowcontrols > button.maximize:hover,
-button.titlebutton.minimize:hover,
-windowcontrols > button.minimize:hover {
-  opacity: 0.8;
-}
-
-/* Old Libadwaita 1.5 Colors */
-
-@define-color destructive_color #ff7b63;
-@define-color destructive_bg_color #c01c28;
-@define-color destructive_fg_color #ffffff;
-@define-color success_color #8ff0a4;
-@define-color success_bg_color #26a269;
-@define-color success_fg_color #ffffff;
-@define-color warning_color #f8e45c;
-@define-color warning_bg_color #cd9309;
-@define-color warning_fg_color rgba(0, 0, 0, 0.8);
-@define-color error_color #ff7b63;
-@define-color error_bg_color #c01c28;
-@define-color error_fg_color #ffffff;
+/* Old Libadwaita Colors */
 @define-color window_bg_color #242424;
 @define-color window_fg_color #ffffff;
 @define-color view_bg_color #1e1e1e;
@@ -92,3 +33,71 @@ windowcontrols > button.minimize:hover {
 @define-color popover_shade_color rgba(0, 0, 0, 0.25);
 @define-color shade_color rgba(0, 0, 0, 0.25);
 @define-color scrollbar_outline_color rgba(0, 0, 0, 0.5);
+
+/* Custom Color */
+@define-color window-control-bg #505050;
+
+.csd headerbar { min-height: 42px;}
+
+headerbar windowcontrols button.close image {
+	background-color: @accent_color;
+}
+
+headerbar GtkWindowControls button.close image {
+    background-color: @accent_color;
+}
+
+headerbar windowcontrols button image {
+	background-color: @window-control-bg;
+}
+
+headerbar GtkWindowControls button image {
+    background-color: @window-control-bg;
+}
+
+/* GTK4 */
+
+windowcontrols > button { /* GTK4 */
+  color: transparent;
+  background-color: transparent;
+  min-width: 2px;
+  min-height: 2px;
+  border-radius: 100%;
+  padding: 1px;
+  margin: 0 5px;
+}
+
+windowcontrols > button > image {
+  padding: 0;
+}
+
+button.titlebutton.close,
+windowcontrols > button.close {
+  background-color: #505050;
+}
+
+button.titlebutton.close:hover,
+windowcontrols > button.close:hover {
+  opacity: 0.8;
+}
+
+button.titlebutton.maximize,
+windowcontrols > button.maximize {
+  background-color: #505050;
+}
+
+button.titlebutton.maximize:hover,
+windowcontrols > button.maximize:hover {
+  opacity: 0.8;
+}
+
+button.titlebutton.minimize,
+windowcontrols > button.minimize {
+  background-color: #505050;
+}
+
+button.titlebutton.minimize:hover,
+windowcontrols > button.minimize:hover {
+  opacity: 0.8;
+}
+
